RESOLVED FIXED215315
REGRESSION (r260831): Web process crashes under Editor::setComposition() after navigating with marked text
https://bugs.webkit.org/show_bug.cgi?id=215315
Summary REGRESSION (r260831): Web process crashes under Editor::setComposition() afte...
Wenson Hsieh
Reported 2020-08-09 13:50:39 PDT
Attachments
Patch (12.02 KB, patch)
2020-08-09 15:25 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-08-09 15:25:06 PDT
Wenson Hsieh
Comment 2 2020-08-09 19:09:42 PDT
Comment on attachment 406274 [details] Patch Thanks for the review!
EWS
Comment 3 2020-08-09 19:18:48 PDT
Committed r265420: <https://trac.webkit.org/changeset/265420> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406274 [details].
Note You need to log in before you can comment on or make changes to this bug.