Source/WebCore/loader/FrameLoader.h
@@ -398,7 +398,6 @@ private:
     void prepareForLoadStart();
     void provisionalLoadStarted();
 
-    void willTransitionToCommitted();
     bool didOpenURL();
 
     void scheduleCheckCompleted();
